--- a/PA_ggeneral.html
+++ b/PA_ggeneral.html
@@ -189,7 +189,7 @@ summary {
 
 <h1 class="title toc-ignore">PA_ggeneral</h1>
 <h4 class="author">Gabriel General</h4>
-<h4 class="date">31-01-2021</h4>
+<h4 class="date">20-02-2021 00:31</h4>
 
 </div>
 
@@ -242,7 +242,9 @@ steps &lt;- total_step$steps</code></pre>
 </div>
 <div id="mean-and-median-of-steps-by-day" class="section level3">
 <h3>Mean and median of steps by day</h3>
+<pre class="r"><code>library(xtable)</code></pre>
 <pre><code>## Warning: package &#39;xtable&#39; was built under R version 4.0.3</code></pre>
+<pre class="r"><code>library(dplyr)</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;dplyr&#39;</code></pre>
 <pre><code>## The following objects are masked from &#39;package:stats&#39;:
@@ -251,8 +253,16 @@ steps &lt;- total_step$steps</code></pre>
 <pre><code>## The following objects are masked from &#39;package:base&#39;:
 ## 
 ##     intersect, setdiff, setequal, union</code></pre>
+<pre class="r"><code>meanPerDay &lt;- aggregate(steps ~ date, data1, mean)
+names(meanPerDay)[2] &lt;- &quot;meanSteps&quot;
+medianPerDay &lt;- aggregate(steps ~ date, data1, median)
+names(medianPerDay)[2] &lt;- &quot;medianSteps&quot;
+summarySteps &lt;- merge(meanPerDay,medianPerDay, all = TRUE)
+tblMeanPerDay &lt;- xtable(summarySteps)
+tblMeanPerDay$date &lt;- as.character(tblMeanPerDay$date)
+print(tblMeanPerDay,type = &quot;html&quot;)</code></pre>
 <!-- html table generated in R 4.0.2 by xtable 1.8-4 package -->
-<!-- Sat Feb 20 00:28:48 2021 -->
+<!-- Sat Feb 20 00:41:10 2021 -->
 <table border="1">
 <tr>
 <th>
